--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,34 @@
   color: #61dafb;
 }
 
+.original_transcript {
+  margin-top: 32px;
+  margin-bottom: 30px;
+}
+
+.original_text {
+  margin-top: 32px;
+  margin-bottom: 30px;
+}
+
+.translator {
+  margin-top: -100px;
+}
+
+.speak {
+  margin-bottom: 20px;
+}
+
+.language {
+  margin-bottom: 20px;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
